--- a/sections/validation.tex
+++ b/sections/validation.tex
@@ -156,7 +156,7 @@ The model training process involves the utilization of two distinct classifiers:
 
 \subsection{Performance Evaluation}
 
-\subsubsection{General Results Evaluation}
+\subsubsection{Results Evaluation}
 
 The evaluation of general results encompasses an assessment of the overall model performance and the computation of fairness metrics.
 
@@ -229,8 +229,6 @@ About these results is possible to make some considerations:
     \item It's important to consider the results obtained from the FtU tests because this raises issues opened in literature, more specifically the ones related to the proxy attributes that may lead to the protected ones.
 \end{itemize}
 
-\subsubsection{Accuracy Grouped by Fairness Algorithm}
-
 For each fairness algorithm employed in the Fair-by-Design workflow, the minimum and maximum accuracy values are presented. This analysis provides insights into the range of accuracy outcomes associated with each fairness algorithm.
 
 \begin{figure}[H]
@@ -253,8 +251,6 @@ There are some considerations that can be made about the accurencies presented:
     \item The algorithm that leads to the maximum accuracy interval is, as previously already reported, the Fairness through Unawareness algorithm.
 
 \end{itemize}
-
-\subsubsection{Fairness Values Grouped by Fairness Algorithm}
 
 Similarly, for each fairness algorithm, the minimum and maximum fairness values are presented. This evaluation allows for an understanding of the fairness outcomes associated with different algorithms, providing a comprehensive view of the trade-offs between accuracy and fairness.
 
