--- a/sections/validation.tex
+++ b/sections/validation.tex
@@ -233,7 +233,7 @@ For each fairness algorithm employed in the Fair-by-Design workflow, the minimum
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\textwidth, height=0.5\textwidth]{accuracy.png}
+    \includegraphics[width=0.7\textwidth, height=0.7\textwidth]{accuracy.png}
     \label{fig:acc_alg}
     \caption{Min-Max accuracy for each fairness algorithm}
 \end{figure}
@@ -250,7 +250,7 @@ Similarly, for each fairness algorithm, the minimum and maximum fairness values 
 %\paragraph{Disparate impact for sex protected attribute}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\textwidth, height=0.5\textwidth]{dis.png}
+    \includegraphics[width=0.7\textwidth, height=0.7\textwidth]{dis.png}
     \label{fig:dis}
     \caption{Min-Max Disparate Impact Metric for Sex protected attributes and for each fairness algorithm}
 \end{figure}
@@ -277,7 +277,7 @@ The disparate impact metric measures the degree on which each algorithm reach th
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\textwidth, height=0.5\textwidth]{dir.png}
+    \includegraphics[width=0.7\textwidth, height=0.7\textwidth]{dir.png}
     \label{fig:dir}
     \caption{Min-Max Disparate Impact Metric for Race protected attributes and for each fairness algorithm}
 \end{figure}
@@ -298,7 +298,7 @@ Still considering the disparate impact metric but considering the \emph{Race} pr
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\textwidth, height=0.5\textwidth]{dpds.png}
+    \includegraphics[width=0.7\textwidth, height=0.7\textwidth]{dpds.png}
     \label{fig:dpds}
     \caption{Min-Max Demographic Parity Difference Metric for Sex protected attributes and for each fairness algorithm}
 \end{figure}
@@ -319,7 +319,7 @@ The demographic parity difference metric measures the degree on which each algor
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\textwidth, height=0.5\textwidth]{dpdr.png}
+    \includegraphics[width=0.7\textwidth, height=0.7\textwidth]{dpdr.png}
     \label{fig:dpdr}
     \caption{Min-Max Demographic Parity Difference for Race protected attributes and for each fairness algorithm}
 \end{figure}
@@ -336,4 +336,4 @@ Still considering the demographic parity difference metric but considering the \
 
 \end{itemize}
 
-It's important to notice that every algorithm but Threshold Optimizer, which perfectly achieves the group fairness, for both the protected attributes, has values for the DPD that are very close to the 0. This means that the algorithms perform better achieving the Group Fairness than the Demographic Parity.
+It's important to notice that every algorithm but Threshold Optimizer, which perfectly achieves the group fairness, for both the protected has values for the DPD that are very close to the 0. This means that the algorithms perform better achieving the Group Fairness than the Demographic Parity.
