--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -246,7 +246,7 @@ A value of 0 suggests parity, while positive or negative values indicate dispari
 
 Choosing a fairness metric given a fairness notion, or vice versa, requires a nuanced understanding of the specific fairness goals and the characteristics of the data. Here's a step-by-step guide:
 
-\textbf{Given a Fairness Notion:}
+\paragraph{Given a Fairness Notion:}
 
 \begin{enumerate}
  
@@ -258,7 +258,7 @@ Choosing a fairness metric given a fairness notion, or vice versa, requires a nu
 
 \end{enumerate}
 
-\textbf{Given a Fairness Metric:}
+\paragraph{Given a Fairness Metric:}
 
 \begin{enumerate}
 
@@ -271,7 +271,7 @@ Choosing a fairness metric given a fairness notion, or vice versa, requires a nu
 \end{enumerate}
 
 This decisional process is well-represented in the following schema:
-
+\newpage
 \begin{figure}[H]
     \centering
     \includegraphics[width=.9\textwidth, height=1.3\textwidth]{notion-metric.png}
